--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -24,7 +24,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    
+      <meta charSet='utf-8' />
+      <meta httpEquiv='X-UA-Compatible' content='IE=edge' />
+      <meta
+        name='viewport'
+        content='width=device-width, initial-scale=1, shrink-to-fit=no'
+      />
+      <meta name='description' content='' />
+      <meta name='author' content='' />
+
+      <title>Dashboard</title>
+      <link
+        href='https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i'
+        rel='stylesheet'
+      />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +54,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--Bootstrap core JavaScript-->
+    <script src='/src/component/vendor/jquery/jquery.min.js'></script>
+    <script src='/src/component/vendor/bootstrap/js/bootstrap.bundle.min.js'></script>
+
+    <!--Core plugin JavaScript-->
+    <script src='/src/component/vendor/jquery-easing/jquery.easing.min.js'></script>
+
+    <!--Custom scripts for all pages-->
+    <script src='/src/component/js/sb-admin-2.min.js'></script>
+
+    <!--Page level plugins -->
+    <script src='/src/component/vendor/chart.js/Chart.min.js'></script>
+
+    <!--Page level custom scripts -->
+    <script src='/src/component/js/demo/chart-area-demo.js'></script>
+    <script src='/src/component/js/demo/chart-pie-demo.js'></script>
   </body>
 </html>
