--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -55,20 +55,20 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!--Bootstrap core JavaScript-->
-    <script src='./src/component/vendor/jquery/jquery.min.js'></script>
-    <script src='./src/component/vendor/bootstrap/js/bootstrap.bundle.min.js'></script>
+    <script src='/src/component/vendor/jquery/jquery.min.js'></script>
+    <script src='/src/component/vendor/bootstrap/js/bootstrap.bundle.min.js'></script>
 
     <!--Core plugin JavaScript-->
-    <script src='./src/component/vendor/jquery-easing/jquery.easing.min.js'></script>
+    <script src='/src/component/vendor/jquery-easing/jquery.easing.min.js'></script>
 
     <!--Custom scripts for all pages-->
-    <script src='./src/component/js/sb-admin-2.min.js'></script>
+    <script src='/src/component/js/sb-admin-2.min.js'></script>
 
     <!--Page level plugins -->
-    <script src='./src/component/vendor/chart.js/Chart.min.js'></script>
+    <script src='/src/component/vendor/chart.js/Chart.min.js'></script>
 
     <!--Page level custom scripts -->
-    <script src='./src/component/js/demo/chart-area-demo.js'></script>
-    <script src='./src/component/js/demo/chart-pie-demo.js'></script>
+    <script src='/src/component/js/demo/chart-area-demo.js'></script>
+    <script src='/src/component/js/demo/chart-pie-demo.js'></script>
   </body>
 </html>
